# opencv-cuda-app-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ThirdParty.cmake  configure_opencv.sh  opencvapp-config.cmake
cmake/: CompileOptions.cmake
data/: DATA_FOLDER.txt  Label.csv
docs/manual/: CMakeLists.txt
source/: CMakeLists.txt
source/baselib/: CMakeLists.txt
source/baselib/include/baselib/: baselib.h
source/baselib/source/: baselib.cpp
source/main/: CMakeLists.txt  main.cpp
source/tests/: CMakeLists.txt
